fixed icon color issue. issue: not showing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,6 +19,7 @@
         --button-secondary: #d9e1f7 ; /* dark mode button */
         --circle-primary: #f34649;  /* column titles */
         --circle-secondary: #4c7de5;  /* column titles */
+        --circle-second: #4c7de5;
         --circle-third: #0d9c9c; /* column titles */
         --hover-bg:#e9eefa;
         --icon-color: #b0b0b0;
@@ -40,6 +41,7 @@
         --button-secondary: #1e1f2a ; /* dark mode button */
         --circle-primary: #f34649;  /* column titles */
         --circle-secondary: #4c7de5;  /* column titles */
+        --circle-second: #4c7de5;
         --circle-third: #0d9c9c; /* column titles */
         --hover-bg: #fff;
         --icon-color: #b0b0b0;
